--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+            
+	<div class="calculator">
+      <div id="input">0</div>
+		 <div class="calculator__keys">
+	<button data-num="7">7</button>
+        <button data-num="8>8</button>
+        <button data-num="9">9</button>
+        <button data-num="-4>4</button>
+        <button data-num="5">5</button>
+        <button data-num="6">6</button>
+        <button data-num="1">1</button>
+        <button data-num="2">2</button>
+        <button data-num="3">3</button>
+        <button data-num="0">0</button>
+        <button id="plus" data-num="+" class="key--operator>+</button>
+        <button id="minus" data-num="-" class="key--operator>-</button>
+        <button id="multiply" data-num="*" class="key--operator>&times;</button>
+        <button id="divide" data-num="/" class="key--operator>÷</button>      <button data-num="." id="dot">.</button>
+        <button data-action="clear" id="clr">AC</button>
+        <button id="ans" data-action="calculate">ans</button>
+         
+	</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
